--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="authenticate_subtitle">To continue, we need to verify it\'s you</string>
 
     <string name="hello_greeting">Hello there!</string>
-
+    <string name="PhyCash">Physical Cash</string>
+    <string name="VirtuCash">Virtual Cash</string>
     <string name="income">Income</string>
     <string name="expenses">Expenses</string>
     <string name="balance">Balance</string>
